syntax = "proto3";

package types;

option go_package = "gitlab.com/pesdata/cluster/backend/bc-adapter/common/interfaces/messages/types";

option java_multiple_files = true;
option java_package = "network.clusterone.grpc.messages.types";
// option java_outer_classname = "WriterServiceProto";

enum CoinCode {
  BTC = 0;
  ETH = 1;
  SOL = 2;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

enum TxStatus {
  NEW = 0;
  PROCESSING = 1;
  FINALIZED = 2;
  FAILED = 3;
}

enum TxDirection {
  INPUT = 0;
  OUTPUT = 1;
  INOUT = 2;
}

message Transaction {
  string tx_hash = 1;
  uint64 created_at = 2;
  uint64 block_num = 3;
  string from_addr = 4;
  string to_addr = 5;
  string amount = 6;
  string fee = 7;
  TxDirection direction = 8;
  TxStatus status = 9;
}
