syntax = "proto3";

package writer;

option go_package = "./writer";

option java_multiple_files = true;
option java_package = "network.clusterone.grpc";
option java_outer_classname = "WriterServiceProto";

service WriterService {
  rpc GetBalanceOf (GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc SendFromTo (SendFromToRequest) returns (SendFromToReply) {}
}

message GetBalanceRequest {
  string symbol = 1;
  string address = 2;
}

message GetBalanceResponse {
  string amount = 1;
  string error = 2;
}

message SendFromToRequest {
  string symbol = 1;
  string from_addr = 2;
  string to_addr = 3;
  string from_private = 4;
  string amount = 5;
}

message SendFromToReply {
  string tx_hash = 1;
  string error = 2;
}
